--- a/mysite/blog/templates/blog/contact.html
+++ b/mysite/blog/templates/blog/contact.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-md-12" style="padding-left:5em;">
             <h1>Send Me a Letter Today</h1>
-            <h5>If you have any question please feel free to send me an Email</h5>
+            <h5>If you have any questions please feel free to send me an Email</h5>
         </div>
     </div>
     <br>
