--- a/mysite/blog/templates/blog/errorlogin.html
+++ b/mysite/blog/templates/blog/errorlogin.html
@@ -1,6 +1,8 @@
 {% extends "blog/base.html" %}
 {% load staticfiles %}
 {% block content %}
+<div class="banner" data-attr="" data-attr-second="">
+</div>
 <div class="alert alert-danger" role="alert">
   <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   <span class="sr-only">Error:</span>
