--- a/mysite/blog/templates/blog/login.html
+++ b/mysite/blog/templates/blog/login.html
@@ -1,21 +1,29 @@
 {% extends "blog/base.html" %}
 {% load staticfiles %}
 {% block content %}
-
-  {% if form.errors %}
-    <p class="error">Sorry, that's not a valid username or password</p>
-  {% endif %}
-
-  <form action="" method="post" class="form-inline">{% csrf_token %}
-    <div class="form-group">
-      <label for="username">User name:</label>
-      <input type="text" name="un" value="" id="username" class="form-control">
-      <label for="password">Password:</label>
-      <input type="password" name="ps" value="" id="password" class="form-control">
-
-      <input type="submit" value="Log in" class="btn btn-default"/>
-      <!--<input type="hidden" name="next" value="{{ next|escape }}" />-->
-    </div>
-  </form>
-
+<div class="banner" data-attr="" data-attr-second="">
+</div>
+<div class="container">
+  <h1>Login Account</h1>
+    <div class="page-header" ></div>
+    {% if form.errors %}
+      <p class="error">Sorry, that's not a valid username or password</p>
+    {% endif %}
+    <form action="" method="post">{% csrf_token %}
+      <div class="form-group row">
+        <label for="username" class="col-md-2 form-control-label">Username:</label>
+        <div class="col-md-10">
+          <input type="text" name="un" value="" id="username" class="form-control">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="password" class="col-md-2 form-control-label">Password:</label>
+        <div class="col-md-10">
+          <input type="password" name="ps" value="" id="password" class="form-control">
+        </div>
+      </div>
+        <input type="submit" value="Log in" class="btn btn-default"/>
+        <!--<input type="hidden" name="next" value="{{ next|escape }}" />-->
+    </form>
+</div>
 {% endblock %}
